# allegrosz

./: .env-default  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  pytest.toml  ruff.toml
.github/: pull_request_template.md
.scripts/: validate_commit_msg.py
alembic/: env.py
alembic/versions/: bb81a35807e2_product.py  ea9ff6b044bf_init.py
app/: main.py
app/api/: deps.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: contact.py  products.py
app/repository/: contact.py  products.py
app/routers/: __init__.py  contact.py
app/schemas/: contact.py  products.py
