[project]
name = "allegrosz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff==0.15.1",
    "ty==0.0.18",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pytest-randomly==4.0.1",
    "pytest-xdist==3.8.0",
    "pytest-timeout==2.4.0",
    "tox>=4.46.3",
    "tox-uv>=1.33.0",
    "sphinx>=9.1.0",
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autodoc-typehints>=3.8.0",
    "sphinx-autobuild>=2025.8.25",
    "pre-commit==4.5.1",
]

[tool.coverage.run]
source = ["src/flashcards"]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
